完成01.4初始Player设计